// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`getCheckInAndCheckOutMarkup\` if all check in and check out values are truthy should render the right structure 1`] = `
<GridColumn
  computer={9}
  tablet={7}
  verticalAlignContent="top"
  width={null}
>
  <React.Fragment>
    <Icon
      className={null}
      color={null}
      hasBorder={false}
      isButton={false}
      isCircular={false}
      isColorInverted={false}
      isDisabled={false}
      isLabelLeft={false}
      labelText="The Label: 9:00 AM"
      labelWeight={null}
      name="check in"
      path={null}
      size={null}
    />
    <Divider
      className=""
      hasLine={false}
      size="medium"
    />
  </React.Fragment>
  <Icon
    className={null}
    color={null}
    hasBorder={false}
    isButton={false}
    isCircular={false}
    isColorInverted={false}
    isDisabled={false}
    isLabelLeft={false}
    labelText="The Label: 9:00 AM"
    labelWeight={null}
    name="check out"
    path={null}
    size={null}
  />
</GridColumn>
`;

exports[`\`getCheckInAndCheckOutMarkup\` if any check in or check out value is false or undefined should return false 1`] = `false`;

exports[`\`getCheckInAndCheckOutMarkup\` if any check in value is false or undefined should render the right structure 1`] = `
<GridColumn
  computer={9}
  tablet={7}
  verticalAlignContent="top"
  width={null}
>
  <Icon
    className={null}
    color={null}
    hasBorder={false}
    isButton={false}
    isCircular={false}
    isColorInverted={false}
    isDisabled={false}
    isLabelLeft={false}
    labelText="The Label: 9:00 AM"
    labelWeight={null}
    name="check out"
    path={null}
    size={null}
  />
</GridColumn>
`;

exports[`\`getCheckInAndCheckOutMarkup\` if any check out value is false or undefined should render the right structure 1`] = `
<GridColumn
  computer={9}
  tablet={7}
  verticalAlignContent="top"
  width={null}
>
  <React.Fragment>
    <Icon
      className={null}
      color={null}
      hasBorder={false}
      isButton={false}
      isCircular={false}
      isColorInverted={false}
      isDisabled={false}
      isLabelLeft={false}
      labelText="The Label: 9:00 AM"
      labelWeight={null}
      name="check in"
      path={null}
      size={null}
    />
    <Divider
      className=""
      hasLine={false}
      size="medium"
    />
  </React.Fragment>
  <Icon
    className={null}
    color={null}
    hasBorder={false}
    isButton={false}
    isCircular={false}
    isColorInverted={false}
    isDisabled={false}
    isLabelLeft={false}
    labelText="undefined: 9:00 AM"
    labelWeight={null}
    name="check out"
    path={null}
    size={null}
  />
</GridColumn>
`;
